# extt

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  index.html  install.sh  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.agents/skills/gpui-action/: SKILL.md
.agents/skills/gpui-async/: SKILL.md
.agents/skills/gpui-context/: SKILL.md
.agents/skills/gpui-element/: SKILL.md
.agents/skills/gpui-entity/: SKILL.md
.agents/skills/gpui-event/: SKILL.md
.agents/skills/gpui-focus-handle/: SKILL.md
.agents/skills/gpui-global/: SKILL.md
.agents/skills/gpui-layout-and-style/: SKILL.md
.agents/skills/gpui-style-guide/: SKILL.md
.agents/skills/gpui-test/: SKILL.md  examples.md  reference.md
.agents/skills/new-component/: SKILL.md
.agents/skills/rust-best-practices/: SKILL.md
.github/workflows/: e2e.yaml  pr.yaml  publish.yml  release.yml  test.yml
apps/extt-desktop/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/extt-desktop/src/: App.tsx  AppContext.ts  App_.tsx  StoreContext.ts  main.tsx  stitches.config.ts  styles.css
apps/extt-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/extt-web/: next.config.js  package-lock.json  package.json  tailwind.config.js
apps/extt-web/pages/: _document.tsx  index.tsx
apps/extt-web/styles/: globals.css
apps/web/: package.json  tsconfig.json
apps/web/app/: copy-button.tsx  extt-logo.tsx  globals.css  layout.tsx  page.tsx
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
crates/extt/: Cargo.toml
crates/extt-app/: Cargo.toml
crates/extt-app/src/: cli.rs  editor.rs
crates/extt-cli/: Cargo.toml
crates/extt-cli/src/: cli.rs  extt.rs  main.rs
crates/extt-core/: Cargo.toml
crates/extt-core/src/: document.rs  lib.rs  store.rs  types.rs  vault.rs
crates/extt-core/tests/: e2e.rs
crates/extt-settings/: Cargo.toml
crates/extt/src/: _main.rs  cli.rs  colors.rs  config.rs  extt.rs  main.rs
crates/lib/: Cargo.toml
docs/: findings.md  walkthrough.md
src/: App.tsx  AppContext.ts  AppSidebar.tsx  App_old.tsx  RightSidebar.tsx  StoreContext.ts  Tiptap.tsx  fonts.css  globals.css  index.css  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Editor.tsx  Element.tsx  Leaf.tsx  Sidebar.tsx  SlateEditor.tsx  TreeEntry.tsx
src/dev/: App.tsx
src/hooks/: useStoredState.ts
src/lib/: deserialize.ts  serialize.ts
src/typings/: index.d.ts
src/utils/: useDebouncedCallback.ts
tests/lib/: deserialize.spec.ts_  index.spec.ts  serialize.spec.ts_
(+74 files in other folders)
