[workspace]
resolver = "2"
members = [
    "crates/extt-app",
    "crates/extt-cli",
    "crates/extt-core",
    "crates/extt-settings",
]
default-members = ["crates/extt-cli"]

[workspace.package]
publish = false
version = "0.1.0-alpha.1"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.86"
