[package]
name = "extt-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "extt-app"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
confy = "1.0.0"
serde = { version = "1.0.228", features = ["derive"] }
extt-core = { path = "../extt-core" }
extt-settings = { path = "../extt-settings" }
clap = { version = "4.5.58", features = ["derive"] }
