[package]
name = "extt-core"
version.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.3"
gray_matter = "0.2"
notify = "6.1"
thiserror = "1.0"
serde_json = "1.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
