[package]
name = "extt"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "extt"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
confy = "1.0.0"
gpui = { git = "https://github.com/zed-industries/zed" }
# gpui-component = { git = "https://github.com/longbridge/gpui-component.git" }
lib = { path = "../lib" }
llama-cpp-2 = { git = "https://github.com/utilityai/llama-cpp-rs" }
serde = { version = "1.0.228", features = ["derive"] }
